# pytorch

./: .gitmodules  CMakeLists.txt  pyproject.toml  setup.py  t.py
.ci/pytorch/: test.sh
.github/ci_commit_pins/: vision.txt  xla.txt
.github/templates/: linux_binary_build_workflow.yml.j2
.github/workflows/: _binary-test-linux.yml  _rocm-test.yml  generated-linux-binary-libtorch-cxx11-abi-nightly.yml  generated-linux-binary-libtorch-pre-cxx11-nightly.yml  generated-linux-binary-manywheel-nightly.yml  generated-windows-binary-conda-nightly.yml  generated-windows-binary-libtorch-debug-main.yml  generated-windows-binary-libtorch-debug-nightly.yml  generated-windows-binary-libtorch-release-main.yml  generated-windows-binary-libtorch-release-nightly.yml  generated-windows-binary-wheel-nightly.yml  inductor.yml  periodic.yml  pull.yml  rocm.yml  trunk.yml
c10/: CMakeLists.txt
c10/util/: FunctionRef.h  Optional.h
caffe2/: CMakeLists.txt
cmake/: Dependencies.cmake
cmake/public/: cuda.cmake
docs/source/: conf.py
test/: allowlist_for_publicAPI.json  test_autocast.py  test_fake_tensor.py  test_foreach.py  test_fx.py  test_mps.py  test_torch.py  test_transformers.py  test_utils.py
test/distributed/: test_dynamo_distributed.py  test_inductor_collectives.py
test/expect/: HasDecompTest.test_has_decomposition.expect
test/forward_backward_compatibility/: check_forward_backward_compatibility.py
test/functorch/: test_control_flow.py
test/inductor/: test_foreach.py  (+5 more)
torch/: __init__.py  _meta_registrations.py  custom_class.h
torch/lib/libshm/: CMakeLists.txt
(+89 files in other folders)
